--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <title>Handwriting Digit Recognition</title>
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./src/styles/main.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
+
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
