--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Handwriting Digit Recognition</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./src/styles/main.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
-
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
     <script src="/static/bundle.js"></script>
   </body>
